IDEA-385581 services: run dashboard: fix multiple runs presentation
- fix clear content action for luxed run content

GitOrigin-RevId: bb583e4a9a0d9899bb7a630f35f0fc13102557ac